# LidarScanner

./: .gitignore  CMakeLists.txt  Makefile  Readme  Socket.hpp  a  pheno3  t1_left.pgm  t1_left.pgm_right.pgm
src/: Camera.cpp  Camera.hpp  Lidar.cpp  Lidar.hpp  MCodeMotor.cpp  MCodeMotor.hpp  Scanner.cpp  Scanner.hpp  Socket.cpp  Socket.hpp  get_distance.hpp  main.cpp  main.hpp
